k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-staging-service
  namespace: staging
spec:
  selector:
    app: static-site-staging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
