k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site-staging-ingress
  namespace: staging
spec:
  ingressClassName: traefik
  rules:
    - host: static-site-staging.192.168.56.20.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site-staging-service
                port:
                  number: 80
